<resources>
    <string name="app_name">My Application98</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="registrarme">registrarme</string>
    <string name="registro_de_datos">Registro de usuario</string>
    <string name="registro_de_empresa">Registro de empresa</string>
    <string name="nombre">Primer Nombre</string>
    <string name="nombre2">Segundo Nombre</string>
    <string name="apellido">Primer Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="correo">Correo Electrónico</string>
    <string name="passwd">Contraseña</string>
    <string name="confirmar_passwd">Confirmar Contraseña</string>
    <string name="cedula">Cedula</string>
    <string name="Telefono">Telefono</string>
    <string name="RUT">Rut</string>
    <string name="RazonSocial">Razon Social</string>
    <string name="NombreFantasia">Nombre Fantasia</string>
    <string name="tipoorg">Tipo Organizacion</string>
    <string name="rubro">Rubro</string>
    <string name="TelefonoEmpresa">Telefono Empresa</string>
    <string name="direccion">Direccion</string>
    <string name="descripcion">Descripcion</string>
    <string name="finalizar">Finalizar</string>
    <string name="ModificarDatosEmpresa">Modificar Datos Empresa</string>
    <string name="editar_informaci_n">EDITAR DATOS</string>
    <string name="confirmar">Confirmar</string>
    <string name="AltaProducto">Alta Producto</string>
    <string name="Nombreart">Nombre Articulo</string>
    <string name="precio">Precio</string>
    <string name="stock">Stock</string>
    <string name="limitexpersona">Limite por persona</string>
    <string name="CrearProducto">Crear Producto</string>
    <string name="nombreart">Nombre del articulo</string>
    <string name="moneda">Moneda</string>
    <string name="porsentaje">Porcentaje</string>
    <string name="dscImagen">imagen del producto</string>


    <string-array name="arraytipoorg">
        <item>ONG</item>
        <item>TipoORG2</item>
        <item>TipoORG3</item>
        <item>TipoORG4</item>
    </string-array>

    <string-array name="moneda">
        <item>USD</item>
        <item>$</item>
    </string-array>

    <string-array name="estadoarticulo">
        <item>Activo</item>
        <item>Pendiente</item>
        <item>Inactivo</item>
    </string-array>

</resources>