<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#E53935"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Fragmentos.fragment_edit_inf_usu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center_horizontal"
            android:text="@string/editar_informaci_n"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="#212121"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/shrek2"
            android:id="@+id/rut"
            android:hint="@string/RUT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rut2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Razonsocial"
            style="@style/shrek2"
            android:hint="@string/RazonSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:helperTextTextColor="#D50000"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/razonsocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fantasia"
            style="@style/shrek2"
            android:hint="@string/NombreFantasia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:helperTextTextColor="#171716"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fantasia2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Tipoorg"
            style="@style/shrek2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/tipoorg"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Tipoorg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Rubro"
            style="@style/shrek2"
            android:hint="@string/rubro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rubro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefono"
            style="@style/shrek2"
            android:hint="@string/TelefonoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telefono2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/direccion"
            style="@style/shrek2"
            android:hint="@string/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/direccion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion"
            style="@style/shrek2"
            android:hint="@string/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descripcion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirmarInfoLeo"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:minHeight="55dp"
            android:text="@string/confirmar"
            android:textStyle="bold"
            app:cornerRadius="16dp">

        </com.google.android.material.button.MaterialButton>



    </LinearLayout>



</androidx.core.widget.NestedScrollView>