<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#E53935"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Fragmentos.fragmentRegistroEmpresa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/registro_de_empresa"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="#212121"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/shrek2"
            android:hint="@string/RUT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"

            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etrut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            style="@style/shrek2"
            android:hint="@string/RazonSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            app:helperTextTextColor="#D50000"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/razonsocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/shrek2"
            android:hint="@string/NombreFantasia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            app:helperTextTextColor="#D50000"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nomfantasia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="@style/shrek2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/tipoorg"
            android:orientation="horizontal"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:counterEnabled="true"
            app:counterMaxLength="60">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tipo Organizacion" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:entries="@array/arraytipoorg" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/shrek2"
            android:hint="@string/rubro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etrubro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/shrek2"
            android:hint="@string/TelefonoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/shrek2"
            android:hint="@string/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etdire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/shrek2"
            android:hint="@string/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="22dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boton"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:minHeight="55dp"
            android:text="@string/finalizar"
            android:textStyle="bold"
            app:cornerRadius="16dp">

        </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/tvres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="respuesta: "></TextView>
    </LinearLayout>





</androidx.core.widget.NestedScrollView>